--- a/about-me.html
+++ b/about-me.html
@@ -90,7 +90,7 @@
 				<div class="banner_inner d-flex align-items-center">
 					<div class="container">
 						<div class="banner_content text-center">
-							<h2>Hiii</h2>
+							<h2>Vishnu N</h2>
 							<div class="page_link">
 								<a href="index.html">Home</a>
 								<a href="elements.html">About-me</a>
@@ -115,9 +115,9 @@
 					<p class="sample-text">
 						
 
-							Hi, I'm Krushan K, An <i>Open-Source Developer</i>, <i>Full-Stack Web Developer</i>, <i>Micro Services Exhaust</i>, <i>System Architect</i>,<i>Tech-Blogger</i>, <i>Speaker</i> and <i>Tech-Exhaust</i> .My skills majorly include JavaScript along with knowledge of Python. I love open source, tech community, and building cool & fun things.<br>
+							Hi, I'm Vishnu N, An <i>Open-Source Developer</i>, <i>Full-Stack Web Developer</i>, <i>Micro Services Exhaust</i>, <i>System Architect</i>,<i>Tech-Blogger</i>, <i>Speaker</i> and <i>Tech-Exhaust</i> .My skills majorly include JavaScript along with knowledge of Python. I love open source, tech community, and building cool & fun things.<br>
 						<br>
-						I'm an Engineering Student and will be graduating from the college in the year 2023 and I am looking for full-time job opportunities.<br>
+						I'm an B.(Com)CA Student and will be graduating from the college in the year 2023 and I am looking for full-time job opportunities.<br>
 						<br>
 						I love working and developing cool stuff with a great source.
 				</p>	
@@ -800,7 +800,7 @@
 							<h3>The website is not completely built.</h3>
 							<a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/hemant"><img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" target="_blank" alt="Buy me a coffee" style="margin-left: 11px;"><span style="margin-left:18px">Buy me a coffee</span></a>
 							<div class="asside1"> 
-							<p><h4> Source code on my github -><a href="https://github.com/8bithemant/Responsive-Portfolio" target="_blank" style="margin-top: 45px;" >Krushan K </h3></a></p>
+							<p><h4> Source code on my github -><a href="https://github.com/8bithemant/Responsive-Portfolio" target="_blank" style="margin-top: 45px;" >Vishnu N </h3></a></p>
 							<h3>Make sure to 🌟</h3> </div>
         				</aside>
         			</div>
