--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>Krushan K</title>
+        <title>Vishnu N</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -105,15 +105,15 @@
 						<div class="col-lg-7">
 							<div class="personal_text">
 								<h6>Hello Everybody, i am</h6>
-								<h3>Krushan K</h3>
+								<h3>Vishnu N</h3>
 								<h4>MERN STACK DEVELOPER</h4>
 								<p>I Design And Develop Experiences That Make Peoples Lives Simple. <br>
 								Quantum Physics | High Energy Physics   Aspirant </p>
 								<ul class="list basic_info">
-									<li><a href="#"><i class="lnr lnr-calendar-full"></i> 27th May, 2001</a></li>
-									<li><a href="#"><i class="lnr lnr-phone-handset"></i> (+91) 9557376881</a></li>
-									<li><a href="#"><i class="lnr lnr-envelope"></i> mailhemantjoshi@gmail.com</a></li>
-									<li><a href="#"><i class="lnr lnr-home"></i> Uttarakhand | India</a></li>
+									<li><a href="#"><i class="lnr lnr-calendar-full"></i> 21st Aug , 2003</a></li>
+									<li><a href="#"><i class="lnr lnr-phone-handset"></i> (+91) 8468898145</a></li>
+									<li><a href="#"><i class="lnr lnr-envelope"></i> vishnunimawat21@gmail.com</a></li>
+									<li><a href="#"><i class="lnr lnr-home"></i> Maharashtra| India</a></li>
 								</ul>
 								<ul class="list personal_social">
 									<li><a href="https://github.com/8bithemant" target="_blank"><i class="fa fa-github"></i></a></li>
@@ -265,7 +265,7 @@
 							<p>I love Om stickers, elements and posters, this is what makes me a fast learner. Creating is a simple way for me to grow , love to learn<br>
 							<h2> Got a project? Lets connect , i work to learn!</h2></p>
         					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="nlogn.in" target="_blank">Krushan K</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="nlogn.in" target="_blank">Vishnu N</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
         				</aside>
         			</div>
