--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>Krushan K</title>
+        <title>Vishnu N</title>
 
-		<meta name="description" content="Krushan K A Full Stack Developer Who Loves To Build With JavaScript"> 
-		<meta property="og:title" content="About Krushan K"/>
+		<meta name="description" content="Vishnu N A Full Stack Developer Who Loves To Build With JavaScript"> 
+		<meta property="og:title" content="About Vishnu N"/>
 		<meta property="og:url" content="https://hemant.codes/" />
-		<meta property="og:description" content="About Krushan K A Full Stack Web Developer">
+		<meta property="og:description" content="About Vishnu N A Full Stack Web Developer">
 		<meta property="og:image" content="/image.png"/> 
 		<meta property="og:type" content=”Portfolio” />
 
@@ -81,12 +81,12 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/random.jpg" alt="..." loading="lazy" alt="main_image">
+								<img src="portfolio/img/1695451626161.jpg" alt="..." loading="lazy" alt="main_image">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
 									<h5>Hi everyone, this is</h5>
-									<div class="Hello"> <h3>Krushan K</h3> </div>
+									<div class="Hello"> <h3>Vishnu N</h3> </div>
 									<h4>MERN Stack Developer</h4>
 
 									<p>I design and develop experiences.<br>All about rockets and black holes. <br> Quantum Physics | High Energy Physics   Aspirant.</p>
@@ -94,9 +94,9 @@
 									
 									
 									<ul class="list basic_info">
-										 <li><a href="https://calendar.google.com/calendar/r/week/2001/5/27" target="_blank"><i class="fa fa-calendar-check-o" aria-hidden="true"></i>May, 2001</a></li> 
+										 <li><a href="https://calendar.google.com/calendar/r/week/2001/5/27" target="_blank"><i class="fa fa-calendar-check-o" aria-hidden="true"></i>Aug ,2003 </a></li> 
 										<li ><a href="mailto:random@randomail.com" target="_blank" ><i class="fa fa-envelope-o" aria-hidden="true"></i>email</a></li> 
-										<li><a href="https://goo.gl/maps/tVS3n9YuWxKK29Qo8" target="_blank"><i class="fa fa-location-arrow" aria-hidden="true"></i> Uttarakhand</a></li>
+										<li><a href="https://goo.gl/maps/tVS3n9YuWxKK29Qo8" target="_blank"><i class="fa fa-location-arrow" aria-hidden="true"></i> Maharashtra</a></li>
 									</ul>
 
 
@@ -590,7 +590,7 @@
 							<h3>The website is not completely built.</h3>
 							<a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/hemant"><img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" target="_blank" alt="Buy me a coffee" style="margin-left: 11px;"><span style="margin-left:18px">Buy me a coffee</span></a>
 							<div class="asside1"> 
-							<p><h4> Source code on my github -><a href="https://github.com/8bithemant/Responsive-Portfolio" target="_blank" style="margin-top: 45px;" >Krushan K </h3></a></p>
+							<p><h4> Source code on my github -><a href="https://github.com/8bithemant/Responsive-Portfolio" target="_blank" style="margin-top: 45px;" >Vishnu N </h3></a></p>
 							<h3>Make sure to 🌟</h3> </div>
         				</aside>
         			</div>
