code like change

--- a/skills.html
+++ b/skills.html
@@ -426,7 +426,7 @@
 					<div class="col-lg-5 col-sm-6">
         				<aside class="f_widget ab_widget">
         					<div class="f_title">
-        						<h2>Hemant...</h2>
+        						<h2>Vishnu N...</h2>
         					</div>
 							<p> <h4> Hii, I am 18 years old..<br>  </h4>
 							<h2> Got a project? Lets connect, i work to learn!</h2></p>
@@ -443,9 +443,9 @@
         						<h2>Sponsor</h2>
         					</div>
 							<h3>The website is not completely built.</h3>
-							<a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/hemant"><img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" target="_blank" alt="Buy me a coffee" style="margin-left: 11px;"><span style="margin-left:18px">Buy me a coffee</span></a>
+							<a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/Vishnu N"><img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" target="_blank" alt="Buy me a coffee" style="margin-left: 11px;"><span style="margin-left:18px">Buy me a coffee</span></a>
 							<div class="asside1"> 
-							<p><h4> Source code on my github -><a href="https://github.com/8bithemant/Responsive-Portfolio" target="_blank" style="margin-top: 45px;" >Vishnu N </h3></a></p>
+							<p><h4> Source code on my github -><a href="https://github.com/8bitVishnu N/Responsive-Portfolio" target="_blank" style="margin-top: 45px;" >Vishnu N </h3></a></p>
 							<h3>Make sure to 🌟</h3> </div>
         				</aside>
         			</div>
@@ -458,7 +458,7 @@
         					<ul class="list">
         						<li><a href="#"><i class="fa fa-youtube"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="https://github.com/8bithemant"><i class="fa fa-github"></i></a></li>
+								<li><a href="https://github.com/8bitVishnu N"><i class="fa fa-github"></i></a></li>
         						<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 								
