--- a/about-me.html
+++ b/about-me.html
@@ -17,7 +17,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>Hemant</title>
+        <title>Vishnu N</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -781,7 +781,7 @@
 					<div class="col-lg-5 col-sm-6">
         				<aside class="f_widget ab_widget">
         					<div class="f_title">
-        						<h2>Hemant...</h2>
+        						<h2>Vishnu N.</h2>
         					</div>
 							<p> <h4> Hii, I am 18 years old..<br>  </h4>
 							<h2> Got a project? Lets connect, i work to learn!</h2>
@@ -798,9 +798,9 @@
         						<h2>Sponsor</h2>
         					</div>
 							<h3>The website is not completely built.</h3>
-							<a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/hemant"><img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" target="_blank" alt="Buy me a coffee" style="margin-left: 11px;"><span style="margin-left:18px">Buy me a coffee</span></a>
+							<a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/Vishnu N"><img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" target="_blank" alt="Buy me a coffee" style="margin-left: 11px;"><span style="margin-left:18px">Buy me a coffee</span></a>
 							<div class="asside1"> 
-							<p><h4> Source code on my github -><a href="https://github.com/8bithemant/Responsive-Portfolio" target="_blank" style="margin-top: 45px;" >Vishnu N </h3></a></p>
+							<p><h4> Source code on my github -><a href="https://github.com/8bitVishnu N/Responsive-Portfolio" target="_blank" style="margin-top: 45px;" >Vishnu N </h3></a></p>
 							<h3>Make sure to 🌟</h3> </div>
         				</aside>
         			</div>
@@ -812,9 +812,9 @@
         					<p><h3>Let's Connect. </h3></p>
         					<ul class="list">
         						<!-- <li><a href="#"><i class="fa fa-youtube"></i></a></li> -->
-								<li><a href="https://twitter.com/8bitHemant" style="color: rgb(85, 158, 187);"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="https://github.com/8bithemant" style="color: rgb(76, 77, 69);"><i class="fa fa-github"></i></a></li>
-        						<li><a href="linkedin.com/in/hemant-j-85518a195" style="color: blue;"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="https://twitter.com/8bitVishnu N" style="color: rgb(85, 158, 187);"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="https://github.com/8bitVishnu N" style="color: rgb(76, 77, 69);"><i class="fa fa-github"></i></a></li>
+        						<li><a href="linkedin.com/in/Vishnu N-j-85518a195" style="color: blue;"><i class="fa fa-linkedin"></i></a></li>
 								<!-- <li><a href=""><i class="fa fa-instagram"></i></a></li> -->
 								
 							</ul>
