--- a/about.html
+++ b/about.html
@@ -81,10 +81,10 @@
 				<div class="banner_inner d-flex align-items-center">
 					<div class="container">
 						<div class="banner_content text-center">
-							<h2>About Hemant</h2>
+							<h2>About Vishnu N</h2>
 							<div class="page_link">
 								<a href="index.html">Home</a>
-								<a href="about-us.html">About Hemant</a>
+								<a href="about-us.html">About Vishnu N</a>
 							</div>
 						</div>
 					</div>
@@ -116,10 +116,10 @@
 									<li><a href="#"><i class="lnr lnr-home"></i> Maharashtra| India</a></li>
 								</ul>
 								<ul class="list personal_social">
-									<li><a href="https://github.com/8bithemant" target="_blank"><i class="fa fa-github"></i></a></li>
-									<li><a href="https://twitter.com/8bitHemant" target=" _blank"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="https://github.com/8bitVishnu N" target="_blank"><i class="fa fa-github"></i></a></li>
+									<li><a href="https://twitter.com/8bitVishnu N" target=" _blank"><i class="fa fa-twitter"></i></a></li>
 									<li><a href="https://www.youtube.com/channel/UCnjtfqrot1h5BU6FMEp3mKA" target="_blank"><i class="fa fa-youtube"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/hemant-joshi-85518a195" target=" _blank"><i class="fa fa-linkedin"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/Vishnu N-joshi-85518a195" target=" _blank"><i class="fa fa-linkedin"></i></a></li>
 
 
 								</ul>
@@ -216,7 +216,7 @@
 						<div class="item">
 							<div class="testi_item">
 								<h3>Node JS</h3> <h4>Weekly Best Node JS Author <h5>Dev.To</h5></h4><p><br>Been writing blogs on Dev.To to help and learn from other Developers and take my code/ideas globally.</p>
-								<a href="https://dev.to/hemant" target="_blank"> <h4>Dev.To</h4> </a>
+								<a href="https://dev.to/Vishnu N" target="_blank"> <h4>Dev.To</h4> </a>
         							<div class="wel_item">
         								<i class="lnr lnr-users"></i>
         								<h4> Jun 11 2020</h4>
@@ -234,7 +234,7 @@
 								<h3>Blogs</h3>  <h4>300 Daily Readers</h4>
 								<!-- <p> On Dev.To i am a active blogger with 300 daily blog reader and 7000+ total blog reads.</p> -->
 								
-								<a href="https://dev.to/hemant" target="_blank"> <h4>Dev.To</h4>  </a>
+								<a href="https://dev.to/Vishnu N" target="_blank"> <h4>Dev.To</h4>  </a>
         							<div class="wel_item">
         								<i class="lnr lnr-users"></i>
         								<h4> May 2020 to present </h4>
