--- a/portfolio.html
+++ b/portfolio.html
@@ -206,7 +206,7 @@
 NO Copyright Issue (<script>document.write(new Date().getFullYear());</script>) Feel free to copy | If you need any help, ping me! 
 </p>
 <p><h4>Made with ❤️️ and JavaScript in India.</h4></p>
-<p><h3> Source code on my github -><a href="https://github.com/8bithemant/Responsive-Portfolio" target="_blank">Vishnu N </h3></a></p>
+<p><h3> Source code on my github -><a href="https://github.com/8bitVishnu N/Responsive-Portfolio" target="_blank">Vishnu N </h3></a></p>
 <p>Make sure to 🌟</p>
         				</aside>
         			</div>
@@ -236,7 +236,7 @@ NO Copyright Issue (<script>document.write(new Date().getFullYear());</script>) 
         					<ul class="list">
         						<li><a href="#"><i class="fa fa-youtube"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="https://github.com/8bithemant"><i class="fa fa-github"></i></a></li>
+								<li><a href="https://github.com/8bitVishnu N"><i class="fa fa-github"></i></a></li>
         						<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 								
